# tg-bot

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Anchor.toml  DEPENDENCY_RESOLUTION_ANALYSIS.md  DEV.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DUPLICATION_REPORT.md  INSTRUCTIONS_TO_UNFREEZE.md  LOCAL_DEVELOPMENT.md  MODULARITY_ARCHITECTURE_REPORT.md  RAID_IMPLEMENTATION.md  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  README-DASHBOARD.md  README.md  SIMPLE_WEB_SETUP.md  botfather-commands.txt  clear-all-data.js  commands.txt  docker-compose.monitoring.yml  force-resume-all.js  jest.config.js  package-lock.json  package-simple.json  package.json  railway.json  start.sh  test-menu-commands.js  tsconfig.build.json  tsconfig.json  unfreeze-game.js  unfreeze-game.ts
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
docs/: ACTIVITY.md  ARCHITECTURE.md  COMPLETE_SYSTEM_ARCHITECTURE.md  DASHBOARD.md  DEPLOYMENT.md  FEATURES.md  ORAO_VRF_INTEGRATION.md  PAID_RAFFLE_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_ANALYSIS.md  README.md  SCHEDULED_GAME_ANNOUNCEMENTS.md  SCHEDULING_GUIDE.md  SECURITY_CHECKLIST.md  SPARC_PHASE2_PSEUDOCODE.md  SPARC_PHASE3_ARCHITECTURE.md  SPARC_PHASE4_REFINEMENT.md  TASKS.md  TELEGRAM_BOT_FRAMEWORK_ANALYSIS.md  TESTING_PLAN.md  TROUBLESHOOTING.md  (+2 more)
programs/lottery/: Cargo.toml
programs/lottery/src/instructions/: create_game.rs  initialize.rs  request_refund.rs
programs/raffle-v4/: Cargo.toml
programs/raffle-v4/src/: lib.rs
programs/raffle-v4/src/instructions/: request_winner_selection.rs
(+436 files in other folders)
