[package]
name = "telegram-lottery"
version = "0.1.0"
description = "Solana program for Telegram lottery with escrow and VRF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "telegram_lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.7"
orao-solana-vrf = "0.2.3"

[dev-dependencies]