[package]
name = "raffle-v4"
version = "0.1.0"
description = "Decentralized VRF-based raffle program for Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle_v4"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
orao-solana-vrf = "0.6.1"
solana-program = "~1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }

# Dependency resolution to fix version conflicts
[dependencies.curve25519-dalek]
version = "3.2.1"
features = ["serde"]